--- a/clang/unittests/Frontend/CMakeLists.txt
+++ b/clang/unittests/Frontend/CMakeLists.txt
@@ -6,11 +6,8 @@ add_clang_unittest(FrontendTests
   ASTUnitTest.cpp
   FrontendActionTest.cpp
   CodeGenActionTest.cpp
-<<<<<<< HEAD
-  IntelOutputStreamTest.cpp
-=======
+  IntelOutputStreamTest.cpp #INTEL
   PCHPreambleTest.cpp
->>>>>>> e218fafc155154e1946723461ea64f1002b6b586
   )
 target_link_libraries(FrontendTests
   clangAST
