A bunch of fixes which allows to build OpenCL FPGA Emulator.
This patch introduces the following changes:

* New platform with set of renamed libraries for FPGA Emulator build to
  differentiate them from other OpenCL runtimes - allows to avoid accidental
  usage of this preview platform by tools and applications.
* Some updates for unittests which allows us to run tests on FPGA
  Emulator device.

Patch is based on the following reviews:
* http://nnopencl-ocl-jenkins-01.inn.intel.com/rb/r/4246/
* http://nnopencl-ocl-jenkins-01.inn.intel.com/rb/r/4499/ (commit f27f73b7)

Change-Id: I54061ee949eba2d9b3cb3411df63cd5437e7034d

--- a/opencl-intel/backend/tests/recorder/CMakeLists.txt
+++ b/opencl-intel/backend/tests/recorder/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories( ${OCL_SOURCE_DIR}/externals/gtest/include
   ${OCL_SOURCE_DIR}/cl_api
   ${CL_API_HEADERS}
   ${OCL_SOURCE_DIR}/tests/framework_test_type/
+  ${OCL_SOURCE_DIR}/tests/test_common
   ${OCL_SOURCE_DIR}/utils/cl_sys_utils/export
 )
 
