--- a/opencl-intel/tests/framework_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/framework_test_type/CMakeLists.txt
@@ -60,15 +60,13 @@ link_directories( ${TBB_LIB_DIR} )
 
 add_executable( ${TARGET} ${TARGET_SOURCES} )
 
+target_link_libraries( ${TARGET} googletest )
 
 if (NOT WIN32)
-  if( ANDROID )
-    target_link_libraries( ${TARGET} c++ )
-    set_property(TARGET ${TARGET} APPEND_STRING PROPERTY LINK_FLAGS " -pie")
-  endif( ANDROID )
-  target_link_libraries( ${TARGET} intelocl${BUILD_PLATFORM} googletest ${PTHREAD_LIB})
+  target_link_libraries( ${TARGET} ${PTHREAD_LIB} )
 else (NOT WIN32)
-  target_link_libraries( ${TARGET} intelocl${BUILD_PLATFORM} googletest delayimp)
+  target_link_libraries( ${TARGET} delayimp )
+
   set_target_properties(${TARGET} PROPERTIES
     LINK_FLAGS_RELEASE "${LINK_FLAGS_RELEASE} /DELAYLOAD:tbb${TBB_BINARIES_POSTFIX}.dll"
     LINK_FLAGS_DEBUG "${LINK_FLAGS_DEBUG} /DELAYLOAD:tbb_debug${TBB_BINARIES_POSTFIX}.dll"
@@ -78,8 +76,15 @@ else (NOT WIN32)
   set_target_properties( ${TARGET} PROPERTIES LINK_FLAGS /STACK:"8388608" )
 endif (NOT WIN32)
 
+if (NOT WIN32 OR BUILD_FPGA_EMULATOR)
+  target_link_libraries( ${TARGET} intelocl${BUILD_PLATFORM}${OPENCL_BINARIES_POSTFIX} )
+else (NOT WIN32 OR BUILD_FPGA_EMULATOR)
+  target_link_libraries( ${TARGET} intelocl${BUILD_PLATFORM} )
+endif (NOT WIN32 OR BUILD_FPGA_EMULATOR)
+
 set_source_files_properties( cl_device_local_mem_size.cpp PROPERTIES COMPILE_DEFINITIONS STACK_SIZE=8388608 )
 
+set_source_files_properties( cl_pipes.cpp PROPERTIES COMPILE_FLAGS "-Wno-unused-function" )
 
 set( CREATE_DIR_NAME tests/framework_test_type)
 
