--- a/llvm/lib/Analysis/Intel_LoopAnalysis/CMakeLists.txt
+++ b/llvm/lib/Analysis/Intel_LoopAnalysis/CMakeLists.txt
@@ -48,4 +48,4 @@ add_llvm_library(LLVMIntel_LoopAnalysis
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/Analysis/Intel_LoopAnalysis
   )
 
-add_dependencies(LLVMIntel_LoopAnalysis intrinsics_gen)
+add_dependencies(LLVMIntel_LoopAnalysis intrinsics_gen intel_directives_gen)
