--- a/opencl-intel/backend/tests/lit.cfg
+++ b/opencl-intel/backend/tests/lit.cfg
@@ -51,8 +51,7 @@ config.suffixes = [] # will be overwritten by local .cfg files
 # All other directories like debugger_test_type, metadata_api_test_type, etc.
 # currently doesn't contain LIT tests, will be updated later
 config.excludes = ['Inputs', 'debugger_test_type', 'metadata_api_test_type',
-    'ocl_tblgen', 'pre_commit', 'recorder', 'type_conversion', 'ocl_ref_conf',
-    'MIC']
+    'pre_commit', 'recorder', 'type_conversion', 'ocl_ref_conf', 'MIC']
 
 # test_source_root: The root path where tests are located.
 config.test_source_root = os.path.dirname(__file__)
