--- a/llvm/lib/Transforms/FPGA-Advisor/MakefileROI
+++ b/llvm/lib/Transforms/FPGA-Advisor/MakefileROI
@@ -1,7 +1,8 @@
 LLVMSRC=/nfs/mmdc/disks/tpi4/proj/ThreadPoints/DesignForward2/CSA-LPU/Leap-FPGA-Advisor/llvm-3.6.1.src/
 BOOST_ROOT=/usr/intel/pkgs/boost/1.59.0/
 all: ROIhandler
-ROIhandler: ROIhandler.C
+ROIhandler: ROIhandler.C fpgaROImarkerhandler.C
 	clang -g -emit-llvm ROIhandler.C -c -o ROIhandler.bc
+	clang -g -emit-llvm fpgaROImarkerhandler.C -c -o fpgaROImarkerhandler.bc
 clean: 
 	rm *.bc *.o
