Refactoring of DDGraph, added HIRGraph.h
Change-Id: I9fdccb6f3860ffbd6c4d0b42c6c2362d790856a6
Old/split llvm commit ID: 4a80017b2a22b5f98cfafdb6a1ed44b4c94e0fcc

--- a/llvm/lib/Analysis/Intel_LoopAnalysis/CMakeLists.txt
+++ b/llvm/lib/Analysis/Intel_LoopAnalysis/CMakeLists.txt
@@ -30,6 +30,7 @@ add_llvm_library(LLVMIntel_LoopAnalysis
   Analysis/HIRAnalysisPass.cpp
   Analysis/HIRDDAnalysis.cpp
   Analysis/DDTests.cpp
+  Analysis/DDGraph.cpp
   Analysis/HIRLoopResource.cpp
   Analysis/HIRLoopStatistics.cpp
   Analysis/HIRSafeReductionAnalysis.cpp 
