--- a/opencl-intel/backend/tests/lit.cfg
+++ b/opencl-intel/backend/tests/lit.cfg
@@ -57,9 +57,9 @@ config.excludes = ['Inputs', 'debugger_test_type', 'metadata_api_test_type',
 config.test_source_root = os.path.dirname(__file__)
 
 # test_exec_root: The root path where tests should be run.
-opencl_binary_dir = getattr(config, 'opencl_binary_dir', None)
-if opencl_binary_dir is not None:
-    config.test_exec_root = os.path.join(opencl_binary_dir, '..', 'backend', 'tests')
+opencl_tests_binary_dir = getattr(config, 'opencl_tests_binary_dir', None)
+if opencl_tests_binary_dir is not None:
+    config.test_exec_root = opencl_tests_binary_dir
 
 # Check that the object root is known.
 if config.test_exec_root is None:
@@ -133,12 +133,10 @@ for pattern in [r"\bbugpoint\b(?!-)",   r"(?<!/|-)\bclang\b(?!-)",
 
 # OpenCL tools substitutions
 
-opencl_binary_dir = getattr(config, 'opencl_binary_dir', None)
-if opencl_binary_dir is None:
-    lit_config.fatal('opencl_binary_dir is not specified!')
+opencl_lit_binaries_dir = os.path.join(opencl_tests_binary_dir, 'LITTests')
 
 config.substitutions.append(('%oclopt',
-    os.path.join(opencl_binary_dir, 'oclopt')))
+    os.path.join(opencl_lit_binaries_dir, 'oclopt')))
 
 if os.pathsep == ';':
     pathext = os.environ.get('PATHEXT', '').split(';')
@@ -150,7 +148,7 @@ for pattern in [r"\bSATest\b"]:
     # pattern starts with "| ", include it in the string to be
     # substituted.
     substitution = re.sub(r"^(\\)?((\| )?)\W+b([0-9A-Za-z-_]+)\\b\W*$",
-                          r"\2" + opencl_binary_dir + "/" + r"\4",
+                          r"\2" + opencl_lit_binaries_dir + "/" + r"\4",
                           pattern)
     for ext in pathext:
         substitution_ext = substitution + ext
