--- a/opencl-intel/tests/bi_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/bi_test_type/CMakeLists.txt
@@ -1,19 +1,11 @@
 set( TARGET bi_test_type )
-set( INSTALL_DIR tests/${TARGET} )
 
-include_directories( AFTER
-    ${CL_API_HEADERS}
-    ../../externals/gtest/include
-    ${OCL_SOURCE_DIR}/tests/test_common )
+set( TARGET_SOURCES bi_tests.cpp pipe_tests.cpp )
+set( TARGET_LIBS test_utils OpenCL )
 
-add_executable( ${TARGET} bi_tests.cpp pipe_tests.cpp )
-target_link_libraries( ${TARGET} googletest ${PTHREAD_LIB})
-target_link_libraries( ${TARGET} OpenCL )
+# TODO: remove from runtime unittests, see CORC-2398
+add_ocl_unittest( ${TARGET} SOURCE_FILES ${TARGET_SOURCES}
+  LINK_LIBRARIES ${TARGET_LIBS} )
 
-install( FILES
-    ../../backend/libraries/ocl_builtins/pipes.h
-    pipe_tests.cl
-    DESTINATION ${INSTALL_DIR} )
-
-set_target_properties( ${TARGET} PROPERTIES FOLDER "validation" )
-install( TARGETS ${TARGET} DESTINATION ${INSTALL_DIR} )
+add_ocl_unittest_artifacts( FILES pipe_tests.cl
+    ${OCL_SOURCE_DIR}/backend/libraries/ocl_builtins/pipes.h)
