--- a/opencl-intel/tests/clang_compiler_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/clang_compiler_test_type/CMakeLists.txt
@@ -1,13 +1,3 @@
-# Ensure we are using the frontend LLVM tools
-if( NOT DEFINED LLVM_PATH_FE )
-    message( FATAL_ERROR "LLVM_PATH_FE is not specified. Please specify LLVM library location for fronted using LLVM_PATH_FE parameter to CMAKE" )
-endif()
-
-set(LLVM_PATH ${LLVM_PATH_FE})
-find_package(LLVM REQUIRED)
-
-include (${OCL_SOURCE_DIR}/cmake_utils/CMakeFuncs.txt)
-
 set( TARGET clang_compiler_test_type )
 
 add_definitions( ${LLVM_DEFINITIONS} )
@@ -17,43 +7,20 @@ include_directories(
     ${LLVM_INCLUDE_DIRS}
     ${LLVM_INCLUDE_DIRS}/cclang
     ${OCL_SOURCE_DIR}/clang_compiler
-    ${OCL_SOURCE_DIR}/externals/gtest/include
-    ${OCL_SOURCE_DIR}/tests/test_common
-    ${OCL_SOURCE_DIR}/externals/khronos/spirv/headers/include
-    ${CL_API_HEADERS} )
+    ${OCL_SOURCE_DIR}/externals/khronos/spirv/headers/include )
 
-set ( CLANG_COMPILER_TEST_TYPE_SOURCE_FILES
+set( CLANG_COMPILER_TEST_TYPE_SOURCE_FILES
     ClangCompilerTestTypeFixture.cpp
     clang_compiler_test_type.cpp )
 
-set ( CLANG_COMPILER_TEST_TYPE_HEADER_FILES
-    ClangCompilerTestTypeFixture.h )
+set( CLANG_COMPILER_TEST_TYPE_LIBS clang_compiler${BUILD_PLATFORM} test_utils )
 
-add_executable( ${TARGET} ${CLANG_COMPILER_TEST_TYPE_HEADER_FILES} ${CLANG_COMPILER_TEST_TYPE_SOURCE_FILES} )
-
-if (NOT WIN32)
-    if( ANDROID )
-        target_link_libraries( ${TARGET} c++ )
-        set_property(TARGET ${TARGET} APPEND_STRING PROPERTY LINK_FLAGS " -pie")
-    endif( ANDROID )
-    target_link_libraries( ${TARGET} clang_compiler${BUILD_PLATFORM} googletest ${PTHREAD_LIB})
-else (NOT WIN32)
-    target_link_libraries( ${TARGET} clang_compiler${BUILD_PLATFORM} googletest )
-endif (NOT WIN32)
-
-set( CREATE_DIR_NAME tests/clang_compiler_test_type)
+# TODO: remove from runtime unittest, see CORC-2398
+add_ocl_unittest( ${TARGET}
+    SOURCE_FILES ${CLANG_COMPILER_TEST_TYPE_SOURCE_FILES}
+    LINK_LIBRARIES ${CLANG_COMPILER_TEST_TYPE_LIBS} )
 
 # Generate SPIR-V input for tests
-
-if( CMAKE_CROSSCOMPILING OR LLVM_USE_NATIVE OR ANDROID )
-   set(TOOLS_BINARY_DIR "${LLVM_BINARY_DIR}/../native/bin")
-   set(SPIRV_CONVERTER  "${LLVM_PATH_BE}/native/bin/llvm-spirv")
-else()
-   set(TOOLS_BINARY_DIR "${LLVM_BINARY_DIR}" )
-   set(SPIRV_CONVERTER  "${LLVM_PATH_BE}/bin/llvm-spirv")
-endif()
-
-set( CLANG "${TOOLS_BINARY_DIR}/clang" )
 
 set( INPUT_FILE test.cl )
 set( SPIR_OUTPUT_FILE test.bc )
@@ -79,9 +46,10 @@ add_custom_command( TARGET ${TARGET}
   COMMAND ${CLANG} -cc1 -x cl ${CMAKE_CURRENT_SOURCE_DIR}/${INPUT_FILE}
   -I ${INCLUDE_HEADERS_PATH} -emit-llvm-bc
   ${SPIR_OPTIONS}
-  -include opencl-c.h -O0 -o ${CMAKE_CURRENT_BINARY_DIR}/${SPIR_OUTPUT_FILE}
+  -include opencl-c.h -disable-llvm-passes -o ${CMAKE_CURRENT_BINARY_DIR}/${SPIR_OUTPUT_FILE}
   MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/${INPUT_FILE}
   DEPENDS ${INCLUDE_HEADERS_PATH}/opencl-c.h ${CMAKE_CURRENT_SOURCE_DIR}/${INPUT_FILE}
+  BYPRODUCTS ${SPIR_OUTPUT_FILE}
   COMMENT "Generate spir binary file for clang_compiler_test_type: ${SPIR_OUTPUT_FILE}"
   VERBATIM
 )
@@ -90,14 +58,7 @@ add_custom_command( TARGET ${TARGET}
   POST_BUILD
   COMMAND ${SPIRV_CONVERTER} -o ${SPIRV_OUTPUT_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${SPIR_OUTPUT_FILE}
   DEPENDS ${SPIR_OUTPUT_FILE}
+  BYPRODUCTS ${SPIRV_OUTPUT_FILE}
   COMMENT "Generate spirv binary file for clang_compiler_test_type: ${SPIRV_OUTPUT_FILE}"
   VERBATIM
 )
-
-# Copy build artifacts to 'Release' area.
-install( TARGETS ${TARGET} DESTINATION ${CREATE_DIR_NAME} )
-install( FILES ${CMAKE_CURRENT_BINARY_DIR}/${SPIRV_OUTPUT_FILE} DESTINATION ${CREATE_DIR_NAME} )
-install( FILES clang_compiler_test_type.pm DESTINATION ${CREATE_DIR_NAME} )
-
-set_target_properties( ${TARGET} PROPERTIES FOLDER "validation" )
-add_dependencies( ${TARGET} clang_compiler${BUILD_PLATFORM} )
